# xbbs

./: .dir-locals.el  .dockerignore  .editorconfig  .gitignore  .mailmap  .pre-commit-config.yaml  MANIFEST.in  Makefile  README  README.rst  TODOS  coordinator.toml  pyproject.toml  requirements.txt  setup.cfg  setup.py  webhooks.toml  worker.toml  xbbs-project-rotate  xbps-keygen
Documentation/: web.rst
config-examples/: coordinator.toml  worker.toml
docker/: Dockerfile  Dockerfile-devrt  Dockerfile-mirror-server  README  compose.yml  coordinator.toml  mirrors-httpd.conf
docs/: web.rst  webhooks.rst
sql/: initialize.sql
xbbs/: __init__.py  constants.py  messages.py  protocol.py  util.py
xbbs/buildsystem/: __init__.py  dag.py
xbbs/buildsystem/xbstrap/: __init__.py  common.py  coordinator.py  dag.py  raw_dag.py  repos.py  worker.py  xbps.py
xbbs/cli/: __init__.py  __main__.py
xbbs/coordinator/: __init__.py  admin_routes.py  build_run.py  build_state.py  coordinator_state.py  enqueued_task.py  execution.py  project.py  project_routes.py  status_routes.py  task_queue.py  worker.py  worker_socket.py  ws_tracker.py
xbbs/data/: config.py
xbbs/sql/: initialize.sql
xbbs/utils/: argparse.py  build_history.py  fs.py  pipe.py  proc.py  rotation.py  str.py  ts.py
xbbs/web/: __init__.py  config.py  utils.py  wsgi.py
xbbs/webhooks/: __init__.py  wsgi.py
xbbs/worker/: __init__.py  __main__.py  artifact_helper.py  builder.py
xbci/: messages.py  protocol.py
xbci/coordinator/: __init__.py  __main__.py  coordinator.py
xbci/worker/: __init__.py  worker.py
(+27 files in other folders)
